# qmlgreet

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  backend.cpp  backend.h  ipc.cpp  ipc.h  main.cpp  resources.qrc  session.cpp  session.h
src/qml/: main.qml
